add existing file

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <figure class="hero" alt="four colleagues discussion on a table inside the meeting room"></figure>
     </header>              
     <main class="content">
-        <section class="search-engine-optimization">
+        <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="image of a page that shows how search engine optimization is able to contribute to finding the right customer for the business"/>
             <h2>Search Engine Optimization</h2>
             <p>
@@ -40,7 +40,7 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>    
-        <section class="social-media-marketing">
+        <section id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="image of people who are using social media that are sitting around the table"/>
             <h2>Social Media Marketing</h2>
             <p>
